Fix logo in nav not vertically align in center

--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,22 @@ body {
 	  overflow-y: auto;
 	}
 }
+
+/*#logo {
+	height: 100%;
+}*/
+    /*position:absolute;
+    top:0;
+    bottom:0;
+    margin:auto;
+		112*30
+}*/
+
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand>img {
+  height: 100%;
+  padding: 10px;
+  width: auto;
+}
